@@ -1,3 +1,8 @@
+2010-05-11  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsmodule.c: New HTTP_NOT_MODIFIED int constant.
+	* cupsconnection.c (Connection_getPPD3): New method.
+
 2010-05-05  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_getPrinterAttributes): The
